tests/integration/snapshots/integration__conformance__y_structure_true_in_array.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[true]
stdout ---
[
  true
]

stderr ---
