tests/integration/snapshots/integration__conformance__y_structure_whitespace_array.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
 [] 
stderr ---
